<resources>
    <string name="app_name">LabTablet</string>
    <string name="search_hint">Search</string>
    <string name="form_ok">OK</string>
    <string name="new_dataset_item">New favorite</string>
    <string name="title_section1">Dataset Info</string>
    <string name="title_section2">Files</string>
    <string name="title_section3">Options</string>
    <string name="file_select">An application profile defines a set of metadata descriptors that will be used to document your data. Please select one from the device to pair with this folder.</string>
    <string name="bt_file_select">Select file</string>
    <string name="give_favorite_name">Please provide the name of the folder (required)</string>
    <string name="auto_data_collection">Labtablet can continuously monitor the gps coordinates and store them in a standard format. After turning off this option, a KML file will be generated and can be included in the favorite metadata records.</string>
    <string name="give_dataset_description">Please provide a description for your dataset (optional).</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Favorites</item>
        <item>Forms</item>
        <item>Updates</item>
        <item>Configurations</item>
    </string-array>
    <string-array name="descriptor_picker_items">
        <item>Recommended</item>
        <item>From Dendro</item>
        <item>All</item>
    </string-array>
    <string-array name="question_types">
        <item>Select type</item>
        <item>Free Text</item> //
        <item>Number</item> //
        <item>Yes/No</item> //MC{Y,N}
        <item>Closed Vocabulary</item> //MC{a,b,c}
        <item>Range</item> //MC{1-3}
        <item>Multi-row answer</item>
        <item>Instructions</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="new_favorite_instructions">Pairing LabTablet with the repository will allow you to collect metadata, and upload it to the repository where your dataset is stored.</string>
    <string name="configuration_header">The following list shows the current file formats that can be generated by LabTablet and their correspondent descriptors. To define an association edit an existing one, click on the item.</string>
    <string name="jpg_description">A commonly used method of lossy compression for digital images, particularly for those images produced by digital photography. LabTablet uses this format to store photos and pictures.</string>
    <string name="mp3_description">An encoding format for digital audio which uses a form of lossy data compression. This format is used to save the voice recordings.</string>
    <string name="gps_description">Keyhole Markup Language - an XML notation for expressing geographic annotation and visualization within Internet-based, two-dimensional maps and three-dimensional Earth browsers</string>
    <string name="title_activity_descriptor_picker">DescriptorPickerActivity</string>
    <string name="recommended">Recommended</string>
    <string name="all">All</string>
    <string name="base_configuration_not_found">Base configuration not found. Please select an application profile from the home screen.</string>
    <string name="check_connectivity">Please check your internet connectivity.</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_metadata_item_delete">Delete record?</string>
    <string name="favorite_view_no_description">No description available</string>
    <string name="field_must_not_empty">Required field</string>
    <string name="unchanged">Changes discarded</string>
    <string name="title_activity_submission_validation">SubmissionValidationActivity</string>
    <string name="next">Next</string>
    <string name="submission_loading">LabTablet is now uploading data to the repository and this <b>can take some time</b>. Please stand by.</string>
    <string name="submission_effect">After this process, the gathered metadata will be available at your repository and associated with the data inside the folder. This favorite will no longer be available for edition after this process is completed.</string>
    <string name="start_process">Start upload</string>
    <string name="cancel_process">Cancel</string>
    <string name="submission_instructions">Uploading metadata to the repository will associate it with the previously created folder and its contents. Before proceeding to the upload, make sure you have enough battery life and that your device has an active internet connection.</string>
    <string name="submission_initial_instructions">Check internet connectivity and battery level\n\nValidate metadata records to submit.\n\nProceed to the upload stage.</string>
    <string name="modified">Modified</string>
    <string name="wait">Ready to start</string>
    <string name="title_section4">Section4</string>
    <string name="root_impossible_to_select">The project root is reserved. Please select another folder, or create a new one.</string>
    <string name="already_in_root_folder">This is already the root of the project</string>
    <string name="action_save">Save</string>
    <string name="action_upload">Upload</string>
    <string name="action_cancel">Cancel</string>
    <string name="form_really_delete">Really delete this record?</string>
    <string name="action_delete">Delete</string>
    <string name="form_really_delete_favorite">Are you sure you want to delete this favorite. After this step, all the enclosed (meta)data will be permanently lost.</string>
    <string name="no_projects">You have no active projects. To create a new one and start collecting metadata, press the button below</string>
    <string name="new_project">Projects can be seen as folders in which all the recorded data and metadata will be stored. A project can hold an unlimited set of resources concerning an experimental run, a field trip or any other activity. At this stage, we only need a name and an optional description. Both can be edited at any time.</string>
    <string name="open_configurations">Configurations</string>
    <string name="no_profile">No application profile was found. Please start by loading a profile in the configurations menu</string>
    <string name="my_projects">My projects</string>
    <string name="metadata_good">Great! You have no generic descriptors associated with your datasets!</string>
    <string name="metadata_meh">You have %1$d generic descriptor(s) in use. Although they may be a quick answer to specifying the context, generic descriptors are bad for your dataset as they provide no context for the metadata.</string>
    <string name="profile_already_loaded">The application profile is already loaded</string>
    <string name="you_have_x_projects">You have %1$d opened projects</string>
    <string name="this_is_a_file">This is a file. It cannot be selected</string>
    <string name="place_files_here">Place files here</string>
    <string name="select_project_above">Select the project.</string>
    <string name="really_cancel_upload">Are you sure you want to quit the submission stage? You can launch the favorite upload at any time.</string>
    <string name="cancel_submission">Cancel submission</string>
    <string name="no_recommended_descriptors">There are no recommended descriptors for this metadata</string>
    <string name="exit">Exit</string>
    <string name="really_exit">Are you sure you want to close the application?</string>
    <string name="clear_associations">Clear associations</string>
    <string name="descriptor_not_set">Descriptor not set</string>
    <string name="welcome">Welcome to LabTablet!</string>
    <string name="collect_metadata_available_sensors">Collect metadata from the available sensors and take notes about the research</string>
    <string name="easily_manage">Easily manage opened projects and metadata</string>
    <string name="upload_and_make_accessible">Upload metadata to the repository and make it available to your team</string>
    <string name="swipe_to_menu">Swipe to open the menu</string>
    <string name="launch_field_mode">Field mode</string>
    <string name="metadata_validated">Metadata validated</string>
    <string name="swipe_to_next">Swipe to the next step</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="new_text_record">New text record</string>
    <string name="network_temp">ºC (Network)</string>
    <string name="not_available">Not available</string>
    <string name="battery_temp">ºC (Battery)</string>
    <string name="net_temp_saved">Network temperature saved</string>
    <string name="temp_saved">Temperature saved</string>
    <string name="mag_saved">Magnetic field saved</string>
    <string name="lum_saved">Luminosity saved</string>
    <string name="photo">Camera</string>
    <string name="sketch">Sketch</string>
    <string name="note">Note</string>
    <string name="position">Position</string>
    <string name="refresh">Update</string>
    <string name="luminosity">Luminosity (µ)</string>
    <string name="magnetic">Magnetic Field</string>
    <string name="continuous_gps">GPS tracking</string>
    <string name="uploaded_successfully">Your metadata was successfully uploaded!</string>
    <string name="goUp">Navigate up</string>
    <string name="action_select_project">Project</string>
    <string name="empty_folder">This folder is empty. You can still deposit your metadata here.</string>
    <string name="loading">Loading</string>
    <string name="action_end_field_mode">Finish</string>
    <string name="cant_end_is_collecting">The GPS is currently being monitored, please stop this task before proceeding</string>
    <string name="cant_end_is_recording">Please stop the recorder before proceeding</string>
    <string name="dendro_configurations">Dendro Configurations</string>
    <string name="dendro_configurations_description">Below are the configurations that will be used to access your Dendro personal area. You will need these configurations when uploading your records to the repository.</string>
    <string name="required">Required field</string>
    <string name="saved">Successfully saved</string>
    <string name="dendro_confs_not_found_title">Dendro settings</string>
    <string name="proje_name_load">Select Project</string>
    <string name="new_favorite_recommendations">If you specify the name of the project, additional descriptors will be suggested depending on your usage. You can change the associated project at any time.</string>
    <string name="new_favorite_proj_name_opt">Project name (optional)</string>
    <string name="new_favorite_folder_name_desc">This field specifies the folder to store the metadata records collected in this project. It is not required that this folder exists in the repository.</string>
    <string name="importing_file">Importing file&#8230;</string>
    <string name="form_editor_top">These are the questions associated with this form. You can edit them or add new ones.</string>
    <string name="empty_form_rl">There are no items associated with this form. To add a new one, tap the button below.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="form_description_goes_here">Your form\'s description goes here</string>
    <string name="want_to_give_form_description">Q: Before you start… \n   Would you like to provide a description for this form?</string>
    <string name="give_file_description">If you want to include any description for this resource, please write it down below. This will appear along the imported file.</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="new_project_header">Creating a new project</string>
    <string name="new_project_name_hint">Name goes here</string>
    <string name="new_project_description_hint">…and its optional description goes here</string>
</resources>