<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.up.fe.labtablet.activities.ValidateMetadataActivity" >

    <item android:id="@+id/action_favorite_upload"
        android:title="@string/action_upload"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:icon="@drawable/ab_up"
        />
    <item android:id="@+id/action_favorite_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:icon="@drawable/ab_cross"
        />

    <item android:id="@+id/action_favorite_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ab_edit"
        />
</menu>
