<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >

    <LinearLayout
        android:background="@color/primary"
        android:orientation="vertical"
        android:id="@+id/form_view_instructions_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_set_form_description"
            android:background="@color/primary_dark"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="sans-serif-thin"
                android:padding="10dp"
                android:text="@string/want_to_give_form_description"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/set_form_description_no"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/set_form_description_yes"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="@string/yes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_set_form_description_lower_view"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:id="@+id/et_set_form_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_description_goes_here"
                    />

                <Button
                    android:text="@string/action_save"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/bt_form_description_submit"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/form_view_instructions"
            android:text="@string/form_editor_top"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_form_items"
        android:layout_below="@id/form_view_instructions_ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <RelativeLayout
        android:layout_below="@id/form_view_instructions_ll"
        android:id="@+id/empty_form_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        >

        <TextView
            android:drawableTop="@drawable/ic_preview"
            android:drawablePadding="25dp"
            android:layout_width="fill_parent"
            android:padding="25dp"
            android:layout_height="wrap_content"
            android:text="@string/empty_form_rl"
            android:textColor="@color/primary"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            />
    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_form_new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ab_plus"
        android:layout_margin="10dp"
        fab:fab_colorNormal="@color/fab_color"
        fab:fab_colorPressed="@color/fab_color_pressed"
        fab:fab_colorRipple="@color/fab_color_ripple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>