<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/tv_instructions"
            android:padding="20dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/card_top"
            android:text="@string/new_favorite_instructions"
            android:textAppearance="?android:attr/textAppearanceLarge">
            <requestFocus/>
            </TextView>


        <RelativeLayout
            android:id="@+id/gv_new_dataset_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card"
            android:layout_below="@id/tv_instructions"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/new_favorite_tv_folder_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/give_favorite_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/new_favorite_tv_folder_name_description"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/new_favorite_tv_folder_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/second_grey"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/new_favorite_folder_name_desc"
                />
            <EditText
                android:id="@+id/et_dataset_name"
                android:textColor="@android:color/black"
                android:layout_below="@+id/new_favorite_tv_folder_name_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/editTextBackground"
                android:ems="10"
                android:inputType="text" >
            <requestFocus />
            </EditText>
        </RelativeLayout>



        <GridLayout
            android:id="@+id/gv_new_dataset_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card"
            android:layout_below="@id/gv_new_dataset_top"
            android:columnCount="3"
            android:padding="20dp"
            android:rowCount="3">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="center"
                android:layout_row="0"
                android:gravity="center"
                android:text="@string/give_dataset_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <EditText
                android:id="@+id/et_dataset_description"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:layout_rowSpan="1"
                android:background="?android:attr/editTextBackground"
                android:ems="10" />
        </GridLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/rl_proj_name"
            android:layout_width="fill_parent"
            android:layout_below="@id/gv_new_dataset_description"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:id="@+id/new_favorite_tv_proj_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_favorite_proj_name_opt"
                />

            <TextView
                android:id="@+id/new_favorite_tv_proj_name_description"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/second_grey"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/new_favorite_recommendations"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/second_grey"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
            <Button
                android:id="@+id/new_favorite_proj_load"
                android:layout_width="match_parent"
                android:text="@string/proje_name_load"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                style="@android:style/Widget.Holo.Button.Borderless"
                />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>